Row Colors: Prevent Misalign When Deleting Row

--- a/css/admin.less
+++ b/css/admin.less
@@ -248,6 +248,7 @@
 					}
 
 					ul li.so-row-colors-container {
+						clear: both;
 						display: flex;
 						justify-content: space-around;
 
